deployment/registry/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    proxy-read-timeout: "600s"
    proxy-send-timeout: "600s"
    client-body-timeout: "600s"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docker.registry
    secretName: tls-secret
  rules:
  - host: docker.registry
    http:
       paths:
       - backend:
          service:
            name: registry-service
            port:
               number: 5000
         path: /
         pathType: Prefix
